--- a/language/ru-RU/ru-RU.plg_content_wt_content_like.ini
+++ b/language/ru-RU/ru-RU.plg_content_wt_content_like.ini
@@ -6,3 +6,7 @@ PLG_WT_CONTENT_LIKE_CSS_ICON_CLASS="CSS-класс иконки"
 PLG_WT_CONTENT_LIKE_CSS_BADGE_CLASS="CSS-класс количества лайков"
 PLG_WT_CONTENT_LIKE_SHOW_MICRODATA="Внедрять в страницу микроразметку Schema.org?"
 PLG_WT_CONTENT_LIKE_CATEGORY_EXCLUDE="Исключать материалы категорий"
+PLG_WT_CONTENT_LIKE_POSITION="Позиция кнопки"
+PLG_WT_CONTENT_LIKE_POSITION_BEFORE_DISPLAY_CONTENT="Перед контентом"
+PLG_WT_CONTENT_LIKE_POSITION_AFTER_DISPLAY_TITLE="После заголовка"
+PLG_WT_CONTENT_LIKE_POSITION_AFTER_DISPLAY_CONTENT="После контента"
