--- a/language/tr-TR/tr-TR.plg_content_wt_content_like.ini
+++ b/language/tr-TR/tr-TR.plg_content_wt_content_like.ini
@@ -6,3 +6,7 @@ PLG_WT_CONTENT_LIKE_CSS_ICON_CLASS="Simge CSS sınıfı"
 PLG_WT_CONTENT_LIKE_CSS_BADGE_CLASS="CSS sınıfı beğeni sayısı"
 PLG_WT_CONTENT_LIKE_SHOW_MICRODATA="Schema.org sayfasına mikro işaretleme yerleştirilsin mi ?"
 PLG_WT_CONTENT_LIKE_CATEGORY_EXCLUDE="Kategorilerdeki makaleleri hariç tut"
+PLG_WT_CONTENT_LIKE_POSITION="Düğme konumu"
+PLG_WT_CONTENT_LIKE_POSITION_BEFORE_DISPLAY_CONTENT="İçerikten önce"
+PLG_WT_CONTENT_LIKE_POSITION_AFTER_DISPLAY_TITLE="Başlıktan sonra"
+PLG_WT_CONTENT_LIKE_POSITION_AFTER_DISPLAY_CONTENT="İçerikten sonra"
