[ENG] Added separate button position settings for the material and category [RUS] Добавлены отдельные настройки положения кнопки для материала и категории

--- a/language/en-GB/en-GB.plg_content_wt_content_like.ini
+++ b/language/en-GB/en-GB.plg_content_wt_content_like.ini
@@ -6,7 +6,8 @@ PLG_WT_CONTENT_LIKE_CSS_ICON_CLASS="Icon CSS class"
 PLG_WT_CONTENT_LIKE_CSS_BADGE_CLASS="CSS class number of likes"
 PLG_WT_CONTENT_LIKE_SHOW_MICRODATA="Embed micro markup in the page Schema.org ?"
 PLG_WT_CONTENT_LIKE_CATEGORY_EXCLUDE="Exclude articles in categories"
-PLG_WT_CONTENT_LIKE_POSITION="Button position"
+PLG_WT_CONTENT_LIKE_ARTICLE_POSITION="Button position in article"
+PLG_WT_CONTENT_LIKE_CATEGORY_POSITION="Button position in category"
 PLG_WT_CONTENT_LIKE_POSITION_BEFORE_DISPLAY_CONTENT="Before display content"
 PLG_WT_CONTENT_LIKE_POSITION_AFTER_DISPLAY_TITLE="After display title"
 PLG_WT_CONTENT_LIKE_POSITION_AFTER_DISPLAY_CONTENT="After display content"
